--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<!-- saved from url=(0052)https://ilmet.lr.ttu.ee/labreg/aruanne_ASIG_uside.pl -->
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Arvutivõrgud labor 1 Analoogsignaalid aruanne</title>
-
 </head>
+
+
 
 <body>
     <h1>Arvutivõrgud Labor 2 Analoogsignaalid aruanne</h1>
@@ -104,7 +106,8 @@
     <p>
         Arvutada signaalipildilt leitud pinge amplituudväärtusest pinge efektiivväärtus:<br>
         <p>
-            Pinge efektiivväärtus (root mean square amplitude) - siinussignaali puhul amplituudväärtus jagada ruutjuur
+            Pinge efektiivväärtus (root mean square amplitude) - siinussignaali puhul amplituudväärtus jagada
+            ruutjuur
             2-ga.:
             U=0,125V/√2 = 0,09V
         </p>
@@ -300,5 +303,6 @@
 
     </p>
 </body>
+
 
 </html>
