added new images

--- a/index.html
+++ b/index.html
@@ -85,10 +85,12 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="assets/valimistoon.png" alt="Valimistoon">
+                    <img src="https://github.com/tristankrass/ostsillograaf/blob/master/assets/valimistoon.png?raw=true"
+                        alt="Valimistoon">
                 </td>
                 <td>
-                    <img src="assets/valimistoonispekter_144556.png" alt="valimistoonSpekter">
+                    <img
+                        src="https://github.com/tristankrass/ostsillograaf/blob/master/assets/valimistoonispekter_144556.png?raw=true">
                 </td>
             </tr>
             <tr>
@@ -128,10 +130,12 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="assets/klahv1_2.2.2_112918.png" alt="klahv">
+                    <img src="https://github.com/tristankrass/ostsillograaf/blob/master/assets/klahv1_2.2.2_112918.png?raw=true"
+                        alt="klahv">
                 </td>
                 <td>
-                    <img src="assets/klahvispekter.png" alt="klahvispekter">
+                    <img src="https://github.com/tristankrass/ostsillograaf/blob/master/assets/klahvispekter.png?raw=true"
+                        alt="klahvispekter">
                 </td>
             </tr>
             <tr>
@@ -180,17 +184,19 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="assets/vilesignaal.png" alt="vilesignaal">
+                    <img src="https://github.com/tristankrass/ostsillograaf/blob/master/assets/vilesignaal.png?raw=true"
+                        alt="vilesignaal">
                 </td>
                 <td>
-                    <img src="assets/vilespekter_142056.png" alt="vilespekter">
+                    <img src="https://github.com/tristankrass/ostsillograaf/blob/master/assets/vilespekter_142056.png?raw=true"
+                        alt="vilespekter">
                 </td>
             </tr>
             <tr>
                 <td>
                     Pinge amplituud: 2,6V<br>
-                    Periood: 1.4ms<br>
-                    Sagedus: 714Hz
+                    Periood: 0.9ms<br>
+                    Sagedus: 1,11 kHz
                 </td>
                 <td>Pinge efektiivväärtus: -4dBV</td>
             </tr>
@@ -207,7 +213,12 @@
         <b>Kas amplituud on suurem vilistatud signaalipildil või vilistatud spektripildil?</b>
     </p>
     <p>
-        Signaalipildil on suurem amplituud, sest pinge efektiivväärtus on suurem kui spektripildil (U=0,6V).
+        <p>Signaalipildil on suurem amplituud, sest pinge</p>
+        <p>efektiivväärtus on suurem kui spektripildil (U=0,6V).</p>
+        <p>* Signaalipildi efektiivväärtus: 1,-8V</p>
+        <p>* spektripildi efektiivväärtus: 10 ^(-4/20) = 0,6 V</p>
+        <p>* signaalipildi amplituud: 1,8 * √2 = 2,6 V</p>
+        <p>* spektripildi amplituud: 0,6 * √2 = 0,8 V</p>
     </p>
 
     <p>
@@ -218,7 +229,8 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="assets/vokaalTristan.png" alt="vokaalTristan">
+                    <img src="https://github.com/tristankrass/ostsillograaf/blob/master/assets/vokaalTristan.png?raw=true"
+                        alt="vokaalTristan">
                 </td>
                 <td>
                     <img src="assets/spekterTristanavokaal_143253.png" alt="vokaalTristanSpekter">
@@ -245,10 +257,12 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="assets/vokaalKatarina.png" alt="vokaalTristan">
+                    <img src="https://github.com/tristankrass/ostsillograaf/blob/master/assets/vokaalKatarina.png?raw=true"
+                        alt="vokaalTristan">
                 </td>
                 <td>
-                    <img src="assets/spekterKatarinavokaal_143153.png" alt="spekterKatarinavokaal_143153">
+                    <img src="https://github.com/tristankrass/ostsillograaf/blob/master/assets/spekterTristanavokaal_143253.png?raw=true"
+                        alt="spekterKatarinavokaal_143153">
                 </td>
             </tr>
             <tr>
