removed old images

--- a/index.html
+++ b/index.html
@@ -300,11 +300,13 @@
     <p>
         y = 0.2 * sin(1200π*t-90)
     </p>
-    <img src="assets/siniseseisev.png" alt="pinge" height="500px" width="500px">
+    <img src="https://github.com/tristankrass/ostsillograaf/blob/master/assets/iseseisevyks.jpg?raw=true" alt="pinge"
+        height="500px" width="500px">
     <hr>
     <p>Uef[dBV]=20*log_10 Uef[V]</p>
     <p>Uef[dBV]=20*log_10 (0,2)=-13.97dBV</p>
-    <img src="assets/hertsid.jpg" alt="efektiivväärtus" height="500px" width="500px">
+    <img src="https://github.com/tristankrass/ostsillograaf/blob/master/assets/iseseisev2.jpg?raw=true"
+        alt="efektiivväärtus" height="500px" width="500px">
 
     <hr>
     <h2>Kokkuvõte ja järeldused</h2>
